--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Punnag Chatterjee
 subtitle: PhD, Mechanical Engineering
-description: >- # this means to ignore newlines until "baseurl:"
+description: #>- # this means to ignore newlines until "baseurl:"
   This is the demo site for a Jekyll theme version of
   HTML5 UP's sleek, responsive site template Prologue.
 author: Punnag Chatterjee
