--- a/_config.yml
+++ b/_config.yml
@@ -58,6 +58,8 @@ dribbble_url:
 # Google Analytics Tracking ID goes here:
 google_analytics:
 
+markdown: maruku
+
 # The following settings are NECESSARY for the Prologue theme to run:
 #theme: jekyll-theme-prologue
 collections: [sections]
